Revert "Merge pull request #1 from snehas-SJSU/supriyaselvanganesan_agenticAI"
This reverts commit 136bc5ec5544fb6b981cd0aaa77265771f8b7346, reversing
changes made to df850f5b45e180db1dffed43882dedd20e8b3f62.
